--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.marquee{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.tab{
+
+  background-color: goldenrod;
+  display: inline-block;
+  height: 5rem;
+}
+.tab2{
+ 
+  display: inline-block;
+  background-color: #AA6C39;
+  height: 5rem;
+}
+.text{
   color: white;
-}
+  font-size: 1.5rem;
+  /* font-weight: bold; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 20px 10px 0px;
 
-.App-link {
-  color: #61dafb;
+  width: 100%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.marq{
+  margin-top: 30px;
 }
